<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/WelcomeTxt"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:background="@drawable/ed_txt_bg"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/Email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:background="@drawable/ed_txt_bg"
        android:ems="10"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="137dp"
        android:layout_height="56dp"
        android:backgroundTint="#BFD11B"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/SignupBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="137dp"
        android:layout_height="56dp"
        android:backgroundTint="#BFD11B"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/LoginBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />


</androidx.constraintlayout.widget.ConstraintLayout>